--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -74,3 +74,12 @@ jobs:
         run: |
           echo "${{ secrets.GITHUB_TOKEN }}" | docker login ghcr.io --username "${{ github.actor }}" --password-stdin
           docker push "${imageName}"
+
+
+  deploy:
+    runs-on: ubuntu-22.04
+    timeout-minutes: 30
+    steps:
+      - uses: actions/checkout@v4
+        with:
+          repository: 'steve-todorov/argocd-wc-wf-gitops'
