--- a/deployment/kubernetes/deployment.yaml
+++ b/deployment/kubernetes/deployment.yaml
@@ -1,23 +1,23 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: $(deploymentId)
+  name: DEPLOYMENT_ID
 spec:
   selector:
     matchLabels:
-      app: $(deploymentId)
+      app: DEPLOYMENT_ID
   replicas: 1
   revisionHistoryLimit: 0
   template:
     metadata:
       labels:
-        app: $(deploymentId)
+        app: DEPLOYMENT_ID
       annotations:
-        git.commit/id: $(commitId)
+        git.commit/id: COMMIT_ID
     spec:
       containers:
-        - name: $(deploymentId)
-          image: $(imageName)
+        - name: DEPLOYMENT_ID
+          image: IMAGE_NAME
 #          resources:
 #            requests:
 #              memory: $(memoryRequest)
@@ -29,4 +29,4 @@ spec:
 #            - name: PROFILE_ARG
 #              value: $(profile)
 #            - name: deploymentId
-#              value: $(deploymentId)
+#              value: DEPLOYMENT_ID
