--- a/deployment/kubernetes/deployment.yaml
+++ b/deployment/kubernetes/deployment.yaml
@@ -15,6 +15,8 @@ spec:
       annotations:
         git.commit/id: COMMIT_ID
     spec:
+      imagePullSecrets:
+        - name: registry-ghcr-carlspring-com
       containers:
         - name: DEPLOYMENT_ID
           image: IMAGE_NAME
