--- a/deployment/kubernetes/deployment.yaml
+++ b/deployment/kubernetes/deployment.yaml
@@ -2,6 +2,8 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: DEPLOYMENT_ID
+  annotations:
+    app.kubernetes.io/part-of: DEPLOYMENT_ID
 spec:
   selector:
     matchLabels:
@@ -38,6 +40,66 @@ apiVersion: v1
 kind: ConfigMap
 metadata:
   name: DEPLOYMENT_ID
+  annotations:
+    app.kubernetes.io/part-of: DEPLOYMENT_ID
 data:
   configmap.properties: ""
-
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: DEPLOYMENT_ID
+  annotations:
+    app.kubernetes.io/part-of: DEPLOYMENT_ID
+spec:
+  ports:
+    - port: 80
+      targetPort: 8080
+  selector:
+    app: DEPLOYMENT_ID
+---
+apiVersion: traefik.containo.us/v1alpha1
+kind: Middleware
+metadata:
+  name: https-middleware-chain
+  annotations:
+    app.kubernetes.io/part-of: DEPLOYMENT_ID
+spec:
+  chain:
+    middlewares:
+      - name: ingress-traefik-no-robots@kubernetescrd
+      - name: ingress-traefik-no-server-version@kubernetescrd
+---
+apiVersion: traefik.containo.us/v1alpha1
+kind: Middleware
+metadata:
+  name: http-middleware-chain
+  annotations:
+    app.kubernetes.io/part-of: DEPLOYMENT_ID
+spec:
+  chain:
+    middlewares:
+      - name: ingress-traefik-redirect-to-https@kubernetescrd
+      - name: ingress-traefik-no-robots@kubernetescrd
+      - name: ingress-traefik-no-server-version@kubernetescrd
+---
+apiVersion: networking.k8s.io/v1
+kind: Ingress
+metadata:
+  name: redirect-to-https-ingress
+  namespace: databases
+  annotations:
+    app.kubernetes.io/part-of: DEPLOYMENT_ID
+    traefik.ingress.kubernetes.io/router.entrypoints: http
+    traefik.ingress.kubernetes.io/router.middlewares: argocd-http-middleware-chain@kubernetescrd
+spec:
+  rules:
+    - host: staging.argocd.carlspring.org
+      http:
+        paths:
+          - backend:
+              service:
+                name: postgres-service
+                port:
+                  name: pgadmin
+            pathType: ImplementationSpecific
