--- a/deployment/kubernetes/deployment.yaml
+++ b/deployment/kubernetes/deployment.yaml
@@ -27,14 +27,14 @@ spec:
             - name: http
               protocol: TCP
               containerPort: 8080
-#          resources:
-#            requests:
-#              memory: $(memoryRequest)
-#            limits:
-#              memory: $(memoryLimit)
+          resources:
+            requests:
+              memory: MEMORY_REQUEST
+            limits:
+              memory: MEMORY_LIMIT
 #          env:
 #            - name: PROFILE_ARG
-#              value: $(profile)
+#              value: PROFILE_ARG
 #            - name: deploymentId
 #              value: DEPLOYMENT_ID
 ---
